--- a/helm-charts/krypt-webapp/values.yaml
+++ b/helm-charts/krypt-webapp/values.yaml
@@ -52,22 +52,22 @@ securityContext: {}
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
-  type: ClusterIP
+  type: NodePort
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
   port: 80
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: davidkraslan.com
       paths:
-        - path: /
-          pathType: ImplementationSpecific
+        - path: /krypt-webapp
+
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
