--- a/helm-charts/krypt-webapp/values.yaml
+++ b/helm-charts/krypt-webapp/values.yaml
@@ -59,7 +59,7 @@ service:
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
   enabled: true
-  className: ""
+  className: nginx
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
@@ -67,7 +67,7 @@ ingress:
     - host: a659f76114f4a4145a177f52c52e268b-db34f6a0cce9c30e.elb.eu-north-1.amazonaws.com
       paths:
         - path: /krypt-webapp
-
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
