--- a/helm-charts/krypt-smart-contract/values.yaml
+++ b/helm-charts/krypt-smart-contract/values.yaml
@@ -64,7 +64,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: a24f241ecf7704d5ea574c12c2faec67-1b568509efa3809d.elb.eu-north-1.amazonaws.com
       paths:
         - path: /smart-contract
           pathType: ImplementationSpecific
