--- a/helm-charts/krypt-webapp/values.yaml
+++ b/helm-charts/krypt-webapp/values.yaml
@@ -58,17 +58,34 @@ service:
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-  enabled: true
-  className: nginx
-  annotations: {}
+  dev:
+    enabled: true
+    className: nginx-dev
+    annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: a24f241ecf7704d5ea574c12c2faec67-1b568509efa3809d.elb.eu-north-1.amazonaws.com
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
+    hosts:
+      - host: a0180155f2ae644658422a3bd7a12c97-a8746ede993e5e78.elb.eu-north-1.amazonaws.com
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
+  test:
+    enabled: true
+    className: nginx-test
+    annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: a671e02e24c38409c9a97359e4bd916e-768bcaf9576a5a18.elb.eu-north-1.amazonaws.com
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
