--- a/helm-charts/krypt-smart-contract/values.yaml
+++ b/helm-charts/krypt-smart-contract/values.yaml
@@ -61,7 +61,7 @@ ingress:
     enabled: true
     className: nginx-dev
     annotations:
-      kubernetes.io/ingress.class: "nginx"
+      kubernetes.io/ingress.class: "nginx-dev"
     # kubernetes.io/tls-acme: "true"
     hosts:
       - host: a0180155f2ae644658422a3bd7a12c97-a8746ede993e5e78.elb.eu-north-1.amazonaws.com
