--- a/envs/dev/krypt-smart-contract/application.yaml
+++ b/envs/dev/krypt-smart-contract/application.yaml
@@ -30,6 +30,8 @@ spec:
         value: 0.1.0
       - name: ingress.ingressClassName
         value: nginx-dev
+      - name: ingress.hostname
+        value: a2cc07b7394974b919073e1158d5d8f9-56ca2977c5375e56.elb.eu-north-1.amazonaws.com #change
     path: helm-charts/krypt-smart-contract
     repoURL: https://github.com/david-kraslan/web3_k8s.git
     targetRevision: main
