--- a/helm-charts/krypt-smart-contract/values.yaml
+++ b/helm-charts/krypt-smart-contract/values.yaml
@@ -58,9 +58,10 @@ service:
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-    enabled: true
-    className: nginx-dev
-    annotations:
+  enabled: true
+  className: nginx-dev  # Default ingress class name (can be overridden by ArgoCD)
+  hostname: "placeholder.example.com"  # Default or placeholder hostname
+  annotations: {}
       #kubernetes.io/ingress.class: "nginx-dev"
     # kubernetes.io/tls-acme: "true"
     #hosts:
