--- a/helm-charts/krypt-webapp/values.yaml
+++ b/helm-charts/krypt-webapp/values.yaml
@@ -58,17 +58,18 @@ service:
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-    enabled: true
-    className: nginx-dev
-    annotations:
-      kubernetes.io/ingress.class: "nginx-dev"
+  enabled: true
+  className: nginx-dev  # Default ingress class name (can be overridden by ArgoCD)
+  hostname: "placeholder.example.com"  # Default or placeholder hostname
+  annotations: {}
+      #kubernetes.io/ingress.class: "nginx-dev"
     # kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: a3b1cd877ad654902b36582d098fe545-96ba5bdb93b18266.elb.eu-north-1.amazonaws.com
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-    tls: []
+    #hosts:
+      #- host: a3b1cd877ad654902b36582d098fe545-96ba5bdb93b18266.elb.eu-north-1.amazonaws.com
+      #paths:
+          #- path: /
+            #pathType: ImplementationSpecific
+    #tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
