--- a/envs/test/krypt-webapp/application.yaml
+++ b/envs/test/krypt-webapp/application.yaml
@@ -28,7 +28,7 @@ spec:
         value: /healthz
       - name: image.tag
         value: 0.1.0
-      - name: ingress.ingressClassName
+      - name: ingress.ClassName
         value: nginx-test
       - name: ingress.hostname
         value: my-service.dev.example.com #change
